[metadata]
name = idefix_cli
version = 0.3.1
description = A CLI to automate mundane tasks with Idefix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neutrinoceros/idefix_cli
author = C.M.T. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    gitpython==3.1.14
    inifix==0.4.4
    rich==9.13.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    idfx = idefix_cli.main:main

[options.extras_require]
dev =
    pre-commit
    pytest>=6.1

[flake8]
exclude = *__init__.py
ignore = E203, E501, W503

[mypy]
python_version = 3.9
allow_redefinition = True
no_implicit_optional = True
warn_unused_ignores = True
warn_unreachable = True
warn_return_any = True
warn_no_return = False
