[metadata]
name = idefix_cli
version = 0.11.1
description = A CLI to automate mundane tasks with Idefix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neutrinoceros/idefix_cli
author = C.M.T. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    gitpython>=3.1.18
    inifix>=0.5.1,<2.0
    packaging>=21.0
    rich>=10.7.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    idfx = idefix_cli._main:main

[options.extras_require]
dev =
    pre-commit
    pytest>=6.1
    pytest-assume>=2.4.3

[flake8]
exclude = *__init__.py
ignore = E203, E501, W503

[mypy]
python_version = 3.8
allow_redefinition = True
no_implicit_optional = True
warn_unused_ignores = True
warn_unreachable = True
warn_return_any = True
warn_no_return = False
